--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ blockquote {
     margin: 20px;
     padding: 20px;
     color: #ffffff;
-    background-color: #23DF37;
+    background-color: #E7F99F;
     border-radius: 20px;
     border-top: 2px solid #38b6cd;
     border-bottom: 2px solid #38b6cd;
